# osm-teams-api

./: .gitignore  README.md  download_youthmappers.py  osm_teams.py  pyproject.toml  youthmappers.parquet  youthmappers.py
.github/workflows/: osm-teams-download.yml  run_youthmappers.yml  tests.yml
src/: cli.py  client.py  youthmappers.py  youthmappers_google.py
tests/: conftest.py  factories.py  test_cli.py  test_client_attributes.py  test_client_osm.py  test_client_request.py
