[project]
name = "osm-teams-api"
version = "0.1.0"
description = "Python client and utilities for the OSM Teams API."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Jennings Anderson", email = "jennings.anderson@gmail.com" }
]
license = { text = "Proprietary" }
dependencies = [
    "pandas>=2.1.0",
    "geopandas>=0.14.0",
    "requests>=2.31.0",
    "shapely>=2.0.0",
    "urllib3>=2.0.0",
    "pyarrow>=14.0.0"
]

[project.optional-dependencies]
google = [
    "google-api-python-client>=2.129.0",
    "google-auth>=2.24.0",
    "google-auth-oauthlib>=1.0.0",
    "gspread>=5.12.0"
]

[project.scripts]
youthmappers = "youthmappers:main"
teams = "cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["client", "youthmappers", "osm_teams_api"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.6.0"
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP", "I"]

[tool.ruff.lint.isort]
known-first-party = ["osm_teams_api", "client", "youthmappers"]
